# website

./: .eleventy.js  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _headers  netlify.toml  package-lock.json  package.json  pyproject.toml  website.py
.circleci/: config.yml
_11ty/: img-perf.js
static/css/: blog.css  bootstrap-subset.css  code.css  fonts.css  minesweeper.css  poem.css
static/js/: audio_player.js  minesweeper.js
static/vtt/: vagrant_gautam.vtt  vasundhara_gautam.vtt
templates/: 404.html  404.md  all-tags.njk  birding.html  bookmarklets.njk  cv.html  feed.njk  index.html  index.njk  layout.html  music.html  posts.njk  recognition.html  recognition.md  service.html  service.md  tags.njk  talks.md  talks.njk  work.html  work.md  work.njk  writing.html  writing.md
templates/_data/: papers.json  talks.json
templates/_includes/: postslist.njk
templates/posts/: 2020-05-05-platypus.md  2021-02-03-pandas.md  2021-02-14-dolls-story.md  2021-07-14-gender-repeal.md  2021-07-14-neopronouns.md  2021-09-20-first-post.md  2021-09-22-goals.md  2021-09-22-vancouver.md  2021-10-02-germany.md  2021-10-23-python-poetry.md  2021-10-26-dialpad.md  2021-10-31-gender-trouble.md  2021-11-09-vancouver.md  2021-11-25-autism.md  2021-12-31-bird-facts.md  2022-04-30-name.md  2022-05-07-what-we-owe-each-other.md  2022-05-17-autism.md  2022-05-23-compliments.md  2022-06-21-siouxsie-and-the-transhees.md  2022-07-03-pelicans.md  2022-07-04-code-crimes.md  2022-07-31-jurassic-park.md  2022-08-08-category-theory.md  2022-08-31-reading.md  2022-09-30-reading.md  (+23 more)
(+60 files in other folders)
