[tool.poetry]
name = "website"
version = "0.1.0"
description = "Webapp for Vasundhara's website"
authors = ["Vasundhara Gautam <vasundhara131719@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# this needs to be an exact pin because of the heroku poetry buildpack
python = "3.7.11"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
